Fix of next batch of failed tests.